conformance/tests/listenerset-parent-not-accepted.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-with-listenerset-not-accepted
  namespace: gateway-conformance-infra
  annotations:
    gateway-api/skip-this-for-readiness: "true"
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
  allowedListeners:
    namespaces:
      from: Same
  infrastructure:
    parametersRef:
      group: invalid.io
      kind: InvalidParameters
      name: invalid
---
# This listenerSet should not be accepted since the Gateway is not accepted
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: listenerset-parent-not-accepted
  namespace: gateway-conformance-infra
spec:
  parentRef:
    kind: Gateway
    group: gateway.networking.k8s.io
    name: gateway-with-listenerset-not-accepted
  listeners:
    - name: http
      port: 8080
      protocol: HTTP
